ingress-wear-host.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear
spec:
  rules:
    - host: wear.onlinestore.com
      http:
        paths:
        - backend:
            serviceName: wear-service
            servicePort: 80
    - host: watch.olinestore.com
      http:
         paths:
         - backend:
             serviceName: watch-service
             servicePort: 80
